# chezmoi-documentation-mcp-server

./: .pinact.yaml  AGENTS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  release.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yaml  release.yaml  smoke.yaml
scripts/: smoke_check.py
src/chezmoi_documentation_mcp_server/: __init__.py  docs_client.py  server.py
tests/: test_docs_client.py
